# LearnOpenGL

./: CMakeLists.txt  LearnOpenGL.sln  fragment.shader  globalGLFWwindow.cpp  globalUtil.h  gtest.cmake  main.cpp  vertex.shader
BoMath/: BoMatrix.h
BoMath/includes/: Matrix.hpp  Quaternion.h
Dependencies/glew-2.1.0/: glew.pc
Dependencies/glew-2.1.0/lib/Release/x64/: libglew32s.lib
Dependencies/glfw-3.3/libs/Release/: glfw3.lib
LearnOpenGL/: IndexBuffer.cpp  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Source.cpp  SourceSketch.cpp  Texture.cpp  Texture.h  TextureFragmentShader.fragmentshader  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h  fragment.shader  imgui.ini  vertex.shader
LearnOpenGL/BoMath/: BoMatrix.h  BoQuaternion.h  Matrix.hpp  Matrix4.h  MatrixX.cpp  MatrixX.h  Quaternion.h
LearnOpenGL/BoMath/includes/: Matrix.hpp  Matrix4.h  MatrixX.h  VectorNum.h  VectorX.h
LearnOpenGL/common/: controls.cpp  objloader.cpp  shader.hpp  shader1.cpp  text2D.cpp  texture1.cpp
MatrixClassesTest/: MatrixClassesTest.cpp  MatrixClassesTest.vcxproj  MatrixClassesTest.vcxproj.filters
common/: CMakeLists.txt.delete  objloader.cpp  shader.cpp  text2D.cpp  texture.cpp
tests/: CMakeLists.txt  openglTests.cpp
